--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "AmincoacidTranslation"
+name = "AminoacidTranslations"
 uuid = "1e468ec5-d64c-4f7b-8748-8e922e548c9d"
 authors = ["Kathatinka <Kathatinka@users.noreply.github.com>"]
 version = "0.1.1"
