--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ SplitApplyCombine = "03a91e81-4c3e-53e1-a0a4-9c0c8f19dd66"
 
 [compat]
 julia = "^1"
+BioSequences = "2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
